--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -51,7 +51,7 @@
 # CVE-2010-4696 1.6.1   SA42133 http://developer.joomla.org/security/news/328-20110201-core-sql-injection-path-disclosure.html http://yehg.net/lab/pr0js/advisories/joomla/core/[joomla_1.6.0]_sql_injection
 # CVE-2010-4837
 # CVE-2010-4838
-# CVE-2011-0005 1.5.22  
+# CVE-2011-0005 1.5.22
 # CVE-2011-1151 1.6.1   http://developer.joomla.org/security/news/328-20110201-core-sql-injection-path-disclosure.html
 # CVE-2011-2488 1.5.23
 # CVE-2011-2509 1.6.4   http://developer.joomla.org/security/news/352-20110604-xss-vulnerability.html
@@ -167,51 +167,55 @@
 # CVE-2018-17857 3.8.13 https://developer.joomla.org/security-centre/753-20181003-core-access-level-violation-in-com-tags
 # CVE-2018-17858 3.8.13 https://developer.joomla.org/security-centre/755-20181005-core-csrf-hardening-in-com-installer.html
 # CVE-2018-17859 3.8.13 https://developer.joomla.org/security-centre/751-20181001-core-hardening-com-contact-contact-form.html
+# CVE-2019-6261 3.9.2 https://developer.joomla.org/security-centre/761-20190102-core-stored-xss-in-com-contact
+# CVE-2019-6262 3.9.2 https://developer.joomla.org/security-centre/763-20190104-core-stored-xss-issue-in-the-global-configuration-help-url
+# CVE-2019-6263 3.9.2 https://developer.joomla.org/security-centre/762-20190103-core-stored-xss-issue-in-the-global-configuration-textfilter-settings
+# CVE-2019-6264 3.9.2 https://developer.joomla.org/security-centre/760-20190101-core-stored-xss-in-mod-banners
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.8.13'
+    secure_version: '3.9.2'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-17855 https://nvd.nist.gov/vuln/detail/CVE-2018-17856 https://nvd.nist.gov/vuln/detail/CVE-2018-17857 https://nvd.nist.gov/vuln/detail/CVE-2018-17858 https://nvd.nist.gov/vuln/detail/CVE-2018-17859'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-6261 https://nvd.nist.gov/vuln/detail/CVE-2019-6262 https://nvd.nist.gov/vuln/detail/CVE-2019-6263 https://nvd.nist.gov/vuln/detail/CVE-2019-6264'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.8.13'
+    secure_version: '3.9.2'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.8.13 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.2 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.8.13'
+    secure_version: '3.9.2'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.8.13 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.2 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.8.13'
+    secure_version: '3.9.2'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.8.13 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.2 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.8.13'
+    secure_version: '3.9.2'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.8.13 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.2 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.8.13'
+    secure_version: '3.9.2'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.8.13 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.2 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
