--- a/yamls/concrete5.yml
+++ b/yamls/concrete5.yml
@@ -8,14 +8,15 @@
 # CVE-2015-4724 https://hackerone.com/reports/59664
 # CVE-2017-6905 5.6.3.5 https://github.com/concrete5/concrete5-legacy/issues/1947
 # CVE-2017-6908 5.6.3.5 https://github.com/concrete5/concrete5-legacy/issues/1948
-# CVE-2017-7725 8.4.0 https://hackerone.com/reports/148300 
+# CVE-2017-7725 8.4.0 https://hackerone.com/reports/148300
 # CVE-2017-18195 8.3.0 https://github.com/r3naissance/NSE/blob/master/http-vuln-cve2017-18195.nse https://www.exploit-db.com/exploits/44194/
 # CVE-2018-13790 8.4.0 https://hackerone.com/reports/243865
+# CVE-2018-19146 8.5.0 https://hackerone.com/reports/437863
 concrete5:
   1:
     location: ['/concrete/config/version.php']
-    secure_version: '8.4.0'
+    secure_version: '8.5.0'
     regexp: ['\$APP_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-7725 https://nvd.nist.gov/vuln/detail/CVE-2018-13790 '
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-19146 https://hackerone.com/reports/437863'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
