--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -551,12 +551,15 @@ WordPress plugin cta:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-8354 1.3.29 https://www.htbridge.com/advisory/HTB23277
+# OVE-20160712-0011 1.3.65 https://sumofpwn.nl/advisory/2016/ultimate_member_local_file_inclusion_vulnerability.html
+# CVE-2019-14946 2.0.52 https://wpvulndb.com/vulnerabilities/9449
+# CVE-2019-14947 2.0.52 https://wpvulndb.com/vulnerabilities/9449
 WordPress plugin ultimate-member:
   1:
     location: ['/wp-content/plugins/ultimate-member/readme.txt']
-    secure_version: '1.3.65'
+    secure_version: '2.0.54'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160712-0011 https://sumofpwn.nl/advisory/2016/ultimate_member_local_file_inclusion_vulnerability.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-14945 https://wpvulndb.com/vulnerabilities/9506'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-symposium-pro:
