--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -100,35 +100,41 @@
 # https://drupal.org/SA-CORE-2020-004   CVE-2020-13663  9.0.1/8.9.1/8.8.8/7.72
 # https://drupal.org/SA-CORE-2020-005   CVE-2020-13664  9.0.1/8.9.1/8.8.8
 # https://drupal.org/SA-CORE-2020-006   CVE-2020-13665  9.0.1/8.9.1/8.8.8
+# https://drupal.org/SA-CORE-2020-007   CVE-2020-13666  9.0.6/8.9.6/8.8.10/7.73
+# https://drupal.org/SA-CORE-2020-008   CVE-2020-13667  9.0.6/8.9.6/8.8.10
+# https://drupal.org/SA-CORE-2020-009   CVE-2020-13668  9.0.6/8.9.6/8.8.10
+# https://drupal.org/SA-CORE-2020-010   CVE-2020-13669  9.0.6/8.9.6/8.8.10
+# https://drupal.org/SA-CORE-2020-011   CVE-2020-13670  9.0.6/8.9.6/8.8.10
+# https://drupal.org/SA-CORE-2020-012   CVE-2020-13671  9.0.8/8.9.9/8.8.11/7.74
 Drupal 9:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.0.1'
+    secure_version: '9.0.8'
     regexp: ['  const VERSION.*?(?P<version>9\.[0-9.]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2020-004 https://nvd.nist.gov/vuln/detail/CVE-2020-13663 https://drupal.org/SA-CORE-2020-005 https://nvd.nist.gov/vuln/detail/CVE-2020-13664 https://drupal.org/SA-CORE-2020-006 https://nvd.nist.gov/vuln/detail/CVE-2020-13665'
+    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 8.9:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.9.1'
+    secure_version: '8.9.9'
     regexp: ['  const VERSION.*?(?P<version>8\.9\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2020-004 https://nvd.nist.gov/vuln/detail/CVE-2020-13663 https://drupal.org/SA-CORE-2020-005 https://nvd.nist.gov/vuln/detail/CVE-2020-13664 https://drupal.org/SA-CORE-2020-006 https://nvd.nist.gov/vuln/detail/CVE-2020-13665'
+    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 8.8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.8.8'
+    secure_version: '8.8.11'
     regexp: ['  const VERSION.*?(?P<version>8\.[0-8]\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2020-004 https://nvd.nist.gov/vuln/detail/CVE-2020-13663 https://drupal.org/SA-CORE-2020-005 https://nvd.nist.gov/vuln/detail/CVE-2020-13664 https://drupal.org/SA-CORE-2020-006 https://nvd.nist.gov/vuln/detail/CVE-2020-13665'
+    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.72'
+    secure_version: '7.74'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2020-004 https://nvd.nist.gov/vuln/detail/CVE-2020-13663'
+    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
