--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -106,35 +106,37 @@
 # https://drupal.org/SA-CORE-2020-010   CVE-2020-13669  9.0.6/8.9.6/8.8.10
 # https://drupal.org/SA-CORE-2020-011   CVE-2020-13670  9.0.6/8.9.6/8.8.10
 # https://drupal.org/SA-CORE-2020-012   CVE-2020-13671  9.0.8/8.9.9/8.8.11/7.74
+# https://drupal.org/SA-CORE-2020-013   CVE-2020-28948  9.0.9/8.9.10/8.8.12/7.75
+# https://drupal.org/SA-CORE-2020-013   CVE-2020-28949  9.0.9/8.9.10/8.8.12/7.75
 Drupal 9:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.0.8'
+    secure_version: '9.0.9'
     regexp: ['  const VERSION.*?(?P<version>9\.[0-9.]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
+    cve: 'https://drupal.org/SA-CORE-2020-013 https://nvd.nist.gov/vuln/detail/CVE-2020-28948 https://nvd.nist.gov/vuln/detail/CVE-2020-28949'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 8.9:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.9.9'
+    secure_version: '8.9.10'
     regexp: ['  const VERSION.*?(?P<version>8\.9\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
+    cve: 'https://drupal.org/SA-CORE-2020-013 https://nvd.nist.gov/vuln/detail/CVE-2020-28948 https://nvd.nist.gov/vuln/detail/CVE-2020-28949'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 8.8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.8.11'
+    secure_version: '8.8.12'
     regexp: ['  const VERSION.*?(?P<version>8\.[0-8]\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
+    cve: 'https://drupal.org/SA-CORE-2020-013 https://nvd.nist.gov/vuln/detail/CVE-2020-28948 https://nvd.nist.gov/vuln/detail/CVE-2020-28949'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.74'
+    secure_version: '7.75'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2020-012 https://nvd.nist.gov/vuln/detail/CVE-2020-13671'
+    cve: 'https://drupal.org/SA-CORE-2020-013 https://nvd.nist.gov/vuln/detail/CVE-2020-28948 https://nvd.nist.gov/vuln/detail/CVE-2020-28949'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
